@@ -65,6 +65,10 @@ Where "NUMBER" is the bug number.
  - Better command-line parameter parsing via GOption.
  - Tab completion order can now be in "last talk" order if you
    /set completion_sort 1.
+ - "Channel Action" and "Channel Action Hilight" now have a 3rd
+   argument of "Mode char", just like normal message events. The last
+   talk time is also now updated on actions.
+ - 
 
 
 ----------------------------------------------------------------------
